feat: Add jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About me - Ploter Maksim</title>
+    <title>{{ page.title }} - Ploter Max</title>
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/b210ec124a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <style>
         .site-menu ul {
             list-style-type: none;
@@ -16,29 +17,19 @@
             content: "\f09b";
         }
     </style>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
     <div class="website__container">
         <aside class="website__aside">
             <div class="website-author-intro__container">
                 <a href="index.html">
-                    <img class="website-author-intro__portrait" src="images/portrait.jpg">
-                    <h1 class="website-author__name">Maksim Ploter</h1>
+                    <img class="website-author-intro__portrait" src="/assets/images/portrait.jpg" alt="portrait">
+                    <h2 class="website-author__name">Max Ploter</h2>
                 </a>
-                <h2 class="">Software engineer, Computer science enthusiast</h2>
+                <p class="website-author-intro">Software engineer, Computer science enthusiast</p>
             </div>
-            <nav class="website__navigation">
-                <ul class="website__navigation__menu">
-                    <li class="site-menu__category">
-                        <a href="index.html" >Articles</a>
-                    </li>
-                    <li class="site-menu__category">
-                        <a href="about-me.html">About me</a>
-                    </li>
-                </ul>
-            </nav>
-
+            {% include navigation.html %}
             <ul class="website-author-social-network__links">
                 <li class="website-author-social-network__link">
                     <i class="fa fa-github"></i>
@@ -55,14 +46,9 @@
             </ul>
         </aside>
         <main class="page__container">
-            <h1 class="page_name">About me</h1>
-            <!--            <article class="article">-->
-            <!--                <h2>Agile</h2>-->
-            <!--                <p>Agile values.</p>-->
-            <!--                <p>Agile principles.</p>-->
-            <!--                <a href="">Read</a>-->
-            <!--            </article>-->
+            {{ content }}
         </main>
     </div>
+
 </body>
 </html>
