--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
-<body>
+<body class="page">
     <header class="header">
         <div class="author">
-            <h2 class="name">Max Ploter</h2>
+            <h2 class="name author__name">Max Ploter</h2>
             <div class="author__intro">Software engineer, Computer science enthusiast.</div>
         </div>
         {% include navigation.html %}
