--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,19 @@
 ---
 ---
+@import "../../blocks/author.css";
+@import "../../blocks/author__intro.css";
+@import "../../blocks/author__name.css";
+
+@import "../../blocks/footer.css";
+
+@import "../../blocks/header.css";
+
+@import "../../blocks/link.css";
+@import "../../blocks/link_selected.css";
 @import "../../blocks/list__item.css";
+
+@import "../../blocks/nav.css";
+
+@import "../../blocks/page.css";
+
+@import "../../blocks/title.css";
