--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,13 +4,15 @@
 @import "../../blocks/author__intro.css";
 @import "../../blocks/author__name.css";
 
+@import "../../blocks/contact-links__item.css";
+
 @import "../../blocks/footer.css";
 
 @import "../../blocks/header.css";
 
 @import "../../blocks/link.css";
 @import "../../blocks/link_selected.css";
-@import "../../blocks/list__item.css";
+@import "../../blocks/nav__item.css";
 
 @import "../../blocks/nav.css";
 
