feat: Add media query for small screen

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
     <title>{{ page.title }} - Ploter Max</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b210ec124a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
@@ -12,7 +13,7 @@
         <div class="side">
             <div class="author">
                 <h2 class="name author__name">Max Ploter</h2>
-                <div class="author__intro">Software engineer, Computer science enthusiast.</div>
+                <p class="author__intro">Backend developer, computer science enthusiast</p>
             </div>
         </div>
         <div class="side">
