fix: Change fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="side">
             <div class="author">
-                <h2 class="name author__name">Max Ploter</h2>
+                <h2 class="title author__title">Max Ploter</h2>
                 <p class="author__intro">Backend developer, computer science enthusiast</p>
             </div>
         </div>
