--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,7 +2,7 @@
 ---
 @import "../../blocks/author.css";
 @import "../../blocks/author__intro.css";
-@import "../../blocks/author__name.css";
+@import "../../blocks/author__title.css";
 
 @import "../../blocks/contact-links__item.css";
 
