feat: Display link tags

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11,10 +11,13 @@
 @import "../../blocks/header.css";
 
 @import "../../blocks/link.css";
+@import "../../blocks/link__tags.css";
+@import "../../blocks/link__title.css";
 @import "../../blocks/link_selected.css";
-@import "../../blocks/nav__item.css";
+@import "../../blocks/list_row.css";
 
 @import "../../blocks/nav.css";
+@import "../../blocks/nav__item.css";
 
 @import "../../blocks/page.css";
 
